Product page image overflow bugfix

--- a/resources/assets/frontend/sass/layout/_cms.scss
+++ b/resources/assets/frontend/sass/layout/_cms.scss
@@ -1,7 +1,8 @@
 #blog-post,
 #product {
   img {
-    width: 100%;
+    width: 100% !important;
+    height: auto !important;
     margin-bottom: 2 * $base-line;
   }
   
